public class Ball {
    public final double x;
    public final double y;

    public Ball(double x, double y) {
        this.x = x;
        this.y = y;
    }
}
